Fixing the avatar cropping flow

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -457,10 +457,18 @@ h3 {
 }
 
 .avatar_big {
-	height: 300px;
-	width: 300px;
+	height: 200px;
+	width: 200px;
+}
+
+.avatar_full {
+	height: 344px;
+	width: 344px;
 }
 
 .datepicker.dropdown-menu {
 	z-index: 9999;
+}
+.jcrop-holder {
+	margin: auto
 }
